# pycas

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  cas_reader.py  pyproject.toml  setup.py
.claude/: settings.local.json
pycas/: __init__.py  __main__.py
