[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pycas"
version = "0.1.1"
description = "Pure Python library for reading and converting Atari 8-bit cassette (CAS) files"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Aykut Kılıç", email = "battalaykut@gmail.com"}
]
maintainers = [
    {name = "Aykut Kılıç", email = "battalaykut@gmail.com"}
]
keywords = ["atari", "cas", "cassette", "tape", "retro", "emulation", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Emulators",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aykutkilic/pycas"
Documentation = "https://github.com/aykutkilic/pycas#readme"
Repository = "https://github.com/aykutkilic/pycas"
"Bug Tracker" = "https://github.com/aykutkilic/pycas/issues"

[project.scripts]
pycas = "cas_reader:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[tool.setuptools]
py-modules = ["cas_reader"]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
